[package]
name = "emergency_brake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {version = "0.1.68", optional = true}
tokio = {version = "1.29.1", optional = true}
tracing = "0.1.37"


[features]
service_checker = ["dep:tokio", "dep:async-trait"]

